--- a/1-HTML-CSS-JavaScript/profile.html
+++ b/1-HTML-CSS-JavaScript/profile.html
@@ -66,7 +66,7 @@
                 <h2>Interests</h2>
                 <ul>
                     <li>Snowboarding</li>
-                    <a href="https://en.wikipedia.org/wiki/Snowboarding">
+                    <a href="https://en.wikipedia.org/wiki/Snowboarding" target="_blank">
                         <img src="images/snbd.jpg" alt="snowboarder" width="256">
                     </a>
                     <li>I <strong>love </strong>Skateboarding <em>and</em> surfing</li>
