--- a/1-HTML-CSS-JavaScript/surveyForm.html
+++ b/1-HTML-CSS-JavaScript/surveyForm.html
@@ -3,11 +3,20 @@
     <head>
         <meta charset="utf-8"/>
         <title>Survey Form</title>
+        <link rel="stylesheet" href="css/survey.css">
+        <style>
+            div.test {
+                width: 100%;
+                padding: 20px;
+                border: 10px solid;
+                margin: 5px;
+            }
+        </style>
     </head>
 
     <body>
         <h1>Survey</h1>
-        <form action="https://learn.nucamp.co/show_everything.php" method="post">
+        <form class="survey-form" action="https://learn.nucamp.co/show_everything.php" method="post">
             <fieldset>
                 <legend>Your information</legend>
                 <div>
@@ -44,7 +53,9 @@
                     <input type="checkbox" name="pets" value="iguana" /> Iguana
                 </div>
             </fieldset>
-            <input type="submit">
+            <input type="submit" id="submit-btn" />
         </form>
+        <p>This text is  <span class="red-text">red</span></p>
+        <div class="test">CSS box model</div>
     </body>
 </html>
