--- a/1-HTML-CSS-JavaScript/profile.html
+++ b/1-HTML-CSS-JavaScript/profile.html
@@ -3,37 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Profile - Austin Wilson</title>
-        <style>
-            * {
-                margin-left: 0em;
-            }
-            body {
-                background-color: slategrey;
-            
-            }
-            nav {
-                position: fixed;
-                background-color: black;
-                top: 0;
-                width: 100%;
-                color: white;
-                font-size: 20px;
-                text-align: center;
-            }
-
-            nav a {
-                text-decoration: none;
-                color: white;
-                margin-right: 20px;
-                text-align: right;
-                
-            }
-            a:link {
-                text-decoration: none;
-            }
-
-
-        </style>
+        <link rel="stylesheet" href="css/profile-style.css">
     </head>
     <body>
 
