started form and table stuff

--- a/1-HTML-CSS-JavaScript/profile.html
+++ b/1-HTML-CSS-JavaScript/profile.html
@@ -52,6 +52,27 @@
                 <a href="http://austinjohnwilson.com/">austin</a>
             </section>
 
+            <!-- other stuff for practice , this will be a form -->
+            <!-- <div>
+                <form action=""></form>
+            </div> -->
+
+            <!-- this will be a table  -->
+            <div class="table">
+                <table>
+                    <thead>
+                        <th>Name</th>
+                        <th>age</th>
+
+                    </thead>
+                    <tbody>
+                        <td>Austin</td>
+                        <td>27</td>
+                    </tbody>
+                </table>
+            </div>
+
+
     </div>
 
 
