--- a/1-HTML-CSS-JavaScript/profile.html
+++ b/1-HTML-CSS-JavaScript/profile.html
@@ -6,12 +6,14 @@
         <link rel="stylesheet" href="css/profile-style.css">
     </head>
     <body>
-
-        <nav>
-            <a href="#about-me">About me</a>
-            <a href="#interests">Interests</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <div class="navbar">
+            Austin
+            <nav>
+                <a href="#about-me">About me</a>
+                <a href="#interests">Interests</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
 
         <div class="whatever">
             <h1>Profile - Austin Wilson</h1>
@@ -58,16 +60,19 @@
             </div> -->
 
             <!-- this will be a table  -->
-            <div class="table">
+            <div>
                 <table>
                     <thead>
-                        <th>Name</th>
-                        <th>age</th>
-
+                        <tr>
+                            <th>Name</th>
+                            <th>age</th>
+                        </tr>    
                     </thead>
                     <tbody>
-                        <td>Austin</td>
-                        <td>27</td>
+                        <tr>
+                            <td>Austin</td>
+                            <td>27</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
