--- a/1-HTML-CSS-JavaScript/workshop2/index.html
+++ b/1-HTML-CSS-JavaScript/workshop2/index.html
@@ -4,55 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        table {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-
-        td,th {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-    </style>
 </head>
 <body>
+    <form action="https://learn.nucamp.co/show_everything.php" method="post">
+        <!-- first fieldset -->
+        <fieldset>
+            <legend>Your face</legend>
+            <div>Upload Your Image: <input type="file" name="image" placeholder="No file chosen"/></div>
+            Image Preview:
+        </fieldset>
 
-    <!-- tables -->
-    <table>
-        <thead>
-            <tr>
-                <th>Column 1</th>
-                <th>Column 2</th>
-                <th>Column 3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Row 1 Column 1</td>
-                <td style="background-color: pink;">Row 1 <span style="font-weight: bold;">Column</span> 2</td>
-                <td>Row 1 Column 3</td>
-            </tr>
-            <tr>
-                <td>Row 2 Column 1</td>
-                <td>Row 2 Column 2</td>
-                <td>Row 2 Column 3</td>
-            </tr>
-        </tbody>
-    </table>
+        <!-- details -->
+        <fieldset>
+            <legend>Your Details</legend>
+            <div>Name: <input type="text" name="name" id="name"></div>
+        </fieldset>
 
-    <br/ >
-
-
-    <!-- forms -->
-    <form action="https://learn.nucamp.co/show_everything.php" method="POST">
-        <input type="text" name="someVal" id="someVal">
-        <select name="pet" id="">
-            <option value="dog">Dog</option>
-            <option value="cat">Cat</option>
-            <option value="hamster">Hamster</option>
-        </select>
-        <input type="submit">
+        <!-- your contact information -->
+        <fieldset>
+            <legend>Your Contact Infomation</legend>
+        </fieldset>
     </form>
 </body>
 </html>
