--- a/1-HTML-CSS-JavaScript/workshop2/index.html
+++ b/1-HTML-CSS-JavaScript/workshop2/index.html
@@ -3,7 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dating site...</title>
+    <style>
+        body {
+            font-family: Verdana, Arial, Sans-serif;
+        }
+        legend {
+            background-color: purple;
+            border-radius: 10px;
+            color: white;
+            padding: 12px;
+        }
+        fieldset {
+            background-color: lavender;
+            border: 10px solid darkblue;
+            border-radius: 20px;
+            margin-bottom: 10px;
+            width: 720px;
+            /* width: 100; */
+        }
+        div {
+            margin: 10px;
+        }
+        label {
+            display: inline-block;
+            text-align: right;
+            vertical-align: top;
+            width: 200px;
+        }
+        input[type="radio"]+label, input[type="checkbox"]+label {
+            width: auto;
+        }
+        .range-caption {
+            background: darkcyan;
+            color: white;
+            padding: 6px;
+            text-align: center;
+        }
+        input[type="submit"] {
+            background-color: darkcyan;
+            border-radius: 10px;
+            color: white;
+            font-size: 20px;
+            padding: 12px;
+
+        }
+
+    </style>
 </head>
 <body>
     <form action="https://learn.nucamp.co/show_everything.php" method="post">
@@ -96,11 +142,24 @@
 
             <!-- 3. address -->
             <div>
+                <label for="address">Address:</label>
+                <textarea name="address" id="address" cols="40"></textarea>
+            </div>
+            
+            <!-- 4. contact methods -->
+            <div>
                 <label>Contact method(s):</label>
                 <input type="checkbox" name="contact" id="emailCheckbox" value="email">
+                <label for="emailCheckbox">Email</label>
+
+                <input type="checkbox" name="contact" id="phoneCheckbox">
+                <label for="phoneCheckbox">Phone</label>
             </div>
-            <!-- 4. contact methods -->
         </fieldset>
+        <div>
+            <input type="submit">
+        </div>
     </form>
+    <script src="https://url.nucamp.co/datingjs"></script>
 </body>
 </html>
