--- a/2-Bootstrap/nucampsite/aboutus.html
+++ b/2-Bootstrap/nucampsite/aboutus.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
 
+
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
@@ -26,32 +27,37 @@
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row'">
+            <div class="col">
+                <!-- The “About Us” title section stretch across the entire width of their row. -->
                <h2>About Us</h2>
                <hr />
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="row row-content">
+            <div class="col-sm-6">
+                <!-- The “Our Mission” part occupies only half the width of the row for small to extra large screens.  -->
+                <!-- The "Our Mission" content are each inside two divs. For each, the outer div should have both the row and row-content classes applied. -->
                 <h3>Our Mission</h3>
                 <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="row row-content">
+            <!-- The "Community Partners" section stretch across the entire width of their row. -->
+            <!-- The "Community Partners" content are each inside two divs. For each, the outer div should have both the row and row-content classes applied. -->
+            <div class="col">
                 <h3>Community Partners</h3>
                 <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
                 <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                <p>Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
                 <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                <p>Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
                 <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                <p>From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
             </div>
         </div>
     </div>
