--- a/2-Bootstrap/nucampsite/index.html
+++ b/2-Bootstrap/nucampsite/index.html
@@ -28,7 +28,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 ">
-                    <a class="btn bg-info text-white mt-4" href="#reserveForm">Reserve Campsite</a>
+                    <a class="btn bg-info text-white mt-4" href="#reserveForm" role="button" data-toggle="tooltip" title="Or call us at <strong>1233453345</strong>"data-html="true" data-placement="bottom">Reserve Campsite</a>
                 </div>
             </div>
 
@@ -203,6 +203,14 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- jQuery method that activates all tooltips for this page -->
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
+
 
 </body>
 
