--- a/2-Bootstrap/nucampsite/index.html
+++ b/2-Bootstrap/nucampsite/index.html
@@ -49,13 +49,106 @@
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
+                <span class="navbar-text ml-auto">
+                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                        <i class="fa fa-sign-in"></i> Login
+                    </a>
+                </span>
             </div>
         </div>
         
         
     </nav>
 
+    <!-- modal component -->
+    <div class="modal fade" id="loginModal" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title">Login</h2>
+                    <button class="close" type="button" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-12">
+                                    <label for="loginEmail" class="sr-only">Email address</label>
+                                    <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+
+                                </div>
+                                <div class="form-group col-12">
+                                    <label for="loginPassword" class="sr-only">Password</label>
+                                    <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Enter password">
+                                </div>
+                                <div class="col">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox">
+                                        <label class="form-check-label">Remember me</label>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-secondary btn-sm ml-1" data-dismiss="modal">Submit</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
+
+        <div class="row row-content">
+            <div class="col-md-8 mx-auto">
+                <div class="carousel slide" data-slide="carousel" id="homeCarousel">
+                    <!-- carousel indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#homeCarousel" data-slide-to="1"></li>
+                        <li data-target="#homeCarousel" data-slide-to="2"></li>
+
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/breadcrumb-trail.jpg" alt="breadcrumb trail" class="d-block w-100">
+                            <div class="carousel-caption">
+                                <h3>Breadcrumb trail campground</h3>
+                                <p class="d-none d-sm-block">Let nucamp be whatever</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/react-lake.jpg" alt="react lake" class="d-block w-100">
+                            <div class="carousel-caption">
+                                <h3>React lake</h3>
+                                <p class="d-none d-sm-block">go for a swim...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/chrome-river.jpg" alt="chrome river" class="d-block">
+                            <div class="carousel-item">
+                                <h3>chrome river</h3>
+                                <p class="d-none d-sm-block">yeah whatever</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- carousel controls -->
+                    <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+
+
+        </div>
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
