changed carousel to buttons and js practice

--- a/2-Bootstrap/nucampsite/aboutus.html
+++ b/2-Bootstrap/nucampsite/aboutus.html
@@ -113,13 +113,16 @@
                     <li class="nav-item"><a class="nav-link" href="#node" role="tab" data-toggle="tab">Node Outdoor Apparel</a</li>
                 </ul> -->
 
+
+                <!-- accordion section -->
                 <div id="accordian">
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a data-toggle="collapse" data-target="#bootstrap">
-                                    Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
-                                </a>
+                                <button class="btn" data-toggle="collapse" data-target="#bootstrap">
+                                    <strong>Bootstrap Outfitters </strong>
+                                    <small>Outdoor Gear Specialists</small>
+                                </button>
                             </h4>
                             <div class="collapse show" id="bootstrap" data-parent="#accordian">
                                 <div class="card-body">
@@ -134,9 +137,10 @@
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#git">
-                                    Git Out Expeditions <small>Group Adventure Expeditions</small>
-                                </a>
+                                <button class="btn collapsed" data-toggle="collapse" data-target="#git">
+                                    <strong>Git Out Expeditions </strong>
+                                    <small>Group Adventure Expeditions</small>
+                                </button>
                             </h4>
 
                             <div class="collapse" id="git" data-parent="#accordian">
@@ -151,9 +155,10 @@
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#mongo">
-                                    Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop.</small>
-                                </a>
+                                <button class="btn collapsed" data-toggle="collapse" data-target="#mongo">
+                                    <strong>Mongo Fly Shop</strong>
+                                    <small>Your Neighborhood Fly Fishing Shop.</small>
+                                </button>
                             </h4>
                             <div class="collapse" id="mongo" data-parent="#accordian">
                                 <div class="card-body">
@@ -168,8 +173,10 @@
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#node">                                Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
-                                </a>
+                                <button class="btn collapsed" data-toggle="collapse" data-target="#node">                                
+                                    <strong>Node Outdoor Apparel </strong>
+                                    <small>Outdoor Clothes & Shoes</small>
+                                </button>
                             </h4>
                             <div class="collapse" id="node" data-parent="#accordian">
                                 <div class="card-body">
