--- a/2-Bootstrap/nucampsite/index.html
+++ b/2-Bootstrap/nucampsite/index.html
@@ -127,8 +127,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/chrome-river.jpg" alt="chrome river" class="d-block">
-                            <div class="carousel-item">
+                            <img src="img/chrome-river.jpg" alt="chrome river" class="d-block w-100">
+                            <div class="carousel-caption">
                                 <h3>chrome river</h3>
                                 <p class="d-none d-sm-block">yeah whatever</p>
                             </div>
