--- a/2-Bootstrap/nucampsite/index.html
+++ b/2-Bootstrap/nucampsite/index.html
@@ -7,16 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- endbuild -->
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
 
+    <!-- jumbotron header -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
@@ -166,6 +171,7 @@
         </div>
     </div>
 
+    <!-- carousel -->
     <div class="container">
 
         <div class="row row-content">
@@ -211,6 +217,11 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
+
+                    <!-- carousel play and pause buttons -->
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <i class="fa fa-pause"> </i>
+                    </button>
                 </div>
             </div>
 
@@ -360,17 +371,21 @@
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./js/scripts.js"></script>
+    <!-- endbuild -->
 
-    <!-- jQuery method that activates all tooltips for this page -->
+
+        <!-- jQuery method that activates all tooltips for this page -->
     <!-- <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script> -->
-
 
 </body>
 
