--- a/2-Bootstrap/nucampsite/index.html
+++ b/2-Bootstrap/nucampsite/index.html
@@ -22,6 +22,7 @@
 <body>
 
     <!-- jumbotron header -->
+
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
@@ -32,21 +33,22 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-                <!-- <div class="col-md-4 col-xl-2 ">
-                    <a class="btn bg-info text-white mt-4" href="#reserveForm" role="button" data-toggle="tooltip" title="Or call us at <strong>1233453345</strong>"data-html="true" data-placement="bottom">Reserve Campsite</a>
-                </div> -->
                 <div class="col-md-4 col-xl-2 ">
-                    <a class="btn bg-info text-white mt-4" role="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+                    <!-- <a class="btn bg-info text-white mt-4" role="button" id="reserveButton">Reserve Campsite</a> -->
+                    <button class="btn bg-info text-white mt-4" role="button" id="reserveButton">Reserve Campsite</button>
                 </div>
             </div>
         </div>
     </header>
 
+
+
+
     <!-- reserve modal component -->
     <div class="modal fade" id="reserveModal" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-info text-white">
+                <div class="modal-header">
                     <h3 class="bg-info text-white">Reserve a campsite</h3>
                     <button class="close" type="button" data-dismiss="modal">&times;</button>
                 </div>
@@ -107,7 +109,7 @@
         </div>
     </div>
 
-
+    <!-- navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30"></a>
@@ -122,7 +124,7 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                    <a role="button" data-toggle="modal" id="loginButton">
                         <i class="fa fa-sign-in"></i> Login
                     </a>
                 </span>
